--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>My Library App</title>
+    <image 
+      name = "image" 
+      property = "og:image" 
+      href = "../src/media/libraryHome.png">
+  </image>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
