--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      name="image"
+      property="og:image"
+      content="wriitersblock.xyz"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,11 +30,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>My Library App</title>
-    <image 
-      name = "image" 
-      property = "og:image" 
-      href = "../src/media/libraryHome.png">
-  </image>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
