Testing meta tag for LinkedIn

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta
       name="image"
       property="og:image"
-      content="src/media/libraryHome.png"
+      content="../src/media/libraryHome.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
