--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       property="og:image"
       content="%PUBLIC_URL%/libraryHome.png"
     />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
