--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta
       name="image"
       property="og:image"
-      content="%PUBLIC_URL%/libraryHome.png"
+      content="%PUBLIC_URL%/LibraryHome.jfif"
     />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
